Bug 152289 - Glossary document with hyperlinks causes "unreadable content" warning when Word opens exported DOCX
Summary: Glossary document with hyperlinks causes "unreadable content" warning when Wo...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.3.0.4 release
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:7.5.0 target:7.4.4
Keywords: filter:docx, implementationError
Depends on:
Blocks:
 
Reported: 2022-11-29 09:27 UTC by Mike Kaganski
Modified: 2025-03-08 21:30 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
A sample DOCX with glossary with an email hyperlink (18.84 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2022-11-29 09:27 UTC, Mike Kaganski
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2022-11-29 09:27:33 UTC
Created attachment 183881 [details]
A sample DOCX with glossary with an email hyperlink

Since v.4.3, Glossary Document part [ECMA-376 Part 1 11.3.8] is round-tripped in DOCX (commit 88b9e7f391910e534b0faf7378ec4c6929d4d44a, "fdo#71786 : Implemented Glossary folder", Nov 27 2013).

If the original glossary document part contained a hyperlink (e.g., an email), its word/glossary/_rels/document.xml.rels contained an item for respective rIdN. But after round-trip, the entry wasn't stored, resulting in bad reference in the part.

Opening the attachment in Writer, and saving (as DOCX) produces a file that gives a warning about "unreadable content" when opened in Word.
Comment 1 Dieter 2022-11-29 21:00:55 UTC
I confirm it with

Version: 7.4.3.2 (x64) / LibreOffice Community
Build ID: 1048a8393ae2eeec98dff31b5c133c5f1d08b890
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: en-GB
Calc: CL
Comment 2 Commit Notification 2022-11-30 05:52:36 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/dda4867a0b5a2d29d8a01a3656e0c8dac7626d2f

tdf#152289: implement external glossary relations roundtrip

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2022-11-30 10:27:42 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/5f89442309dcb92dbea9c7a6c788a7fc5f627c98

tdf#152289: implement external glossary relations roundtrip

It will be available in 7.4.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.