tdf#152289: implement external glossary relations roundtrip

Change-Id: I20f4439abfbf73485734fd8373fffb2916d390f0
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/143470
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
(cherry picked from commit dda4867a0b5a2d29d8a01a3656e0c8dac7626d2f)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/143442
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>