include/com/sun/star/uno/Any.h
@@ -88,6 +88,7 @@ public:
     explicit Any(rtl::OUStringConcat<T1, T2> const &) = delete;
     template<typename T> explicit inline Any(rtl::OUStringNumber<T> && value);
     template<typename T> explicit Any(rtl::OUStringNumber<T> const &) = delete;
+    template <std::size_t N> explicit inline Any(const rtl::OUStringLiteral<N>& value);
 #endif
 
     /** Copy constructor: Sets value of the given any.
